--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,6 @@
 }
 
 .logo{
-    background-image: url("img\logo.svg"),
-                      url("img\pattern.png");
+    background-image: url("../img/pattern.png");
+    background-color: blue;
 }
